--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,40 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
-<title>Java Scripting</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-<link href="css/stylesheet.css" rel="stylesheet" type="text/css">
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+<title>Insert title here</title>
 </head>
 <body>
-	<div data-ng-app="">
-		<legend>
-			Enter Java code into box: <br>
-			<div id="subtitle">*Note: objects, variables, and other
-				information is not saved after submitting</div>
-			<form>
-				<textarea></textarea>
-				<div class="btn-toolbar" role="toolbar">
-					<div class="btn-group" role="group">
-						<button type="submit" class="btn btn-default">Submit</button>
-						<button type="reset" class="btn btn-default">Clear</button>
-					</div>
-				</div>
-			</form>
-		</legend>
-		<legend>
-			Result: <br>
-			<textarea disabled></textarea>
-		</legend>
-	</div>
+
 </body>
 </html>
